tests/transpiler/x/pl/right_join.out
--- Right Join using syntax ---
Customer Alice has order 
ERROR: /workspace/mochi/tests/transpiler/x/pl/right_join.pl:1: Initialization goal raised exception:
ERROR: get_dict/3: Type error: `dict' expected, found `get_dict(order,map{customerName:"Alice",order:map{customerId:1,id:100,total:250}},_3904)' (a compound)
